--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
     build: ./api
     command: bundle exec rails s -p 3000 -b '0.0.0.0'
     volumes:
-      - '.:/api'
+      - './api/:/api'
     ports:
       - '8000:3000'
     depends_on:
@@ -18,7 +18,7 @@ services:
     command: yarn dev
     container_name: hometime-app
     volumes:
-      - '.:/app'
+      - './app:/app'
       - '/app/node_modules'
     ports:
       - '3000:3000'
