--- a/api/Gemfile
+++ b/api/Gemfile
@@ -7,6 +7,7 @@ gem 'rails', '~> 5.2.0'
 gem 'pg', '>= 0.18', '< 2.0'
 gem 'puma', '~> 3.11'
 gem 'bcrypt', '~> 3.1.7'
+gem 'net-ssh'
 
 # Use Capistrano for deployment
 gem 'capistrano-rails', group: :development
