--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,18 @@
 version: '3'
 services:
   db:
+    container_name: hometime-db
     image: postgres
     volumes:
-      - ./tmp/db:/var/lib/postgresql/data
+      - ./api/tmp/db:/var/lib/postgresql/data
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: password
+      POSTGRES_HOST_AUTH_METHOD: trust
+    ports:
+      - '5432'
   api:
+    container_name: hometime-api
     build: ./api
     command: bundle exec rails s -p 3000 -b '0.0.0.0'
     volumes:
@@ -14,9 +22,9 @@ services:
     depends_on:
       - db
   app:
+    container_name: hometime-app
     build: ./app
     command: yarn dev
-    container_name: hometime-app
     volumes:
       - './app:/app'
       - '/app/node_modules'
