--- a/api/Gemfile
+++ b/api/Gemfile
@@ -8,14 +8,13 @@ gem 'pg', '>= 0.18', '< 2.0'
 gem 'puma', '~> 3.11'
 gem 'bcrypt', '~> 3.1.7'
 gem 'net-ssh'
-
-# Use Capistrano for deployment
-gem 'capistrano-rails', group: :development
-
-# Reduces boot times through caching; required in config/boot.rb
 gem 'bootsnap', '>= 1.1.0', require: false
-
 gem 'rack-cors'
+gem 'devise'
+
+group :development do
+  gem 'capistrano-rails'
+end
 
 group :development, :test do
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
