--- a/api/Gemfile
+++ b/api/Gemfile
@@ -6,7 +6,6 @@ ruby '2.5.1'
 gem 'rails', '~> 5.2.0'
 gem 'pg', '>= 0.18', '< 2.0'
 gem 'puma', '~> 3.11'
-gem 'bcrypt', '~> 3.1.7'
 gem 'net-ssh'
 gem 'bootsnap', '>= 1.1.0', require: false
 gem 'rack-cors'
@@ -18,6 +17,7 @@ end
 
 group :development, :test do
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
+  gem 'faker'
 end
 
 group :development do
