changd app theme, removed assets and unnecessary files, changed routes, added api1 and api2 pages

--- a/app/.vscode/settings.json
+++ b/app/.vscode/settings.json
@@ -2,5 +2,8 @@
   "editor.tabSize": 2,
   "eslint.packageManager": "yarn",
   "prettier.singleQuote": true,
-  "editor.wordWrap": "on"
+  "editor.wordWrap": "on",
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.formatOnSave": true,
+  "editor.formatOnPaste": false
 }
